<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:background="@drawable/msg_lay_bkg"
    android:layout_margin="@dimen/fab_margin"
    android:padding="16dp">

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bkg_otplay"
        app:srcCompat="@drawable/note_img" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/otpSentTxtView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:layout_weight="1"
                android:text="@string/otp_sent"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/otpSentPhoneNo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/appbar_padding_top"
                android:layout_weight="1"
                android:text="@string/otp_mob"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/otpSentTimeTxtVw"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="@dimen/appbar_padding_top"
                android:text="@string/otp_time"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/black" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>