<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/row_item_border"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_padding_btn"
        android:layout_marginBottom="@dimen/extra_padding_btn"
        android:layout_marginLeft="@dimen/extra_padding"
        android:layout_marginRight="@dimen/extra_padding"
        android:background="@drawable/otp_bkg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/appbar_padding_top"
            android:text="@string/otp_to_send"
            android:textColor="@color/black"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/otpSndtTxtVw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="@dimen/appbar_padding_top"
            android:text=""
            android:textSize="20sp"
            android:textColor="@color/dark_col_blue"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/extra_padding"
        android:background="@drawable/msg_lay_bkg"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editTextMsg"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:layout_margin="@dimen/appbar_padding_top"
            android:padding="@dimen/extra_padding"
            android:text=""
            android:ems="10"
            android:hint="@string/enter_msg" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/extra_padding_btn"
        android:orientation="horizontal">

        <Button
            android:id="@+id/submitBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/appbar_padding_top"
            android:background="@drawable/btn_round_corner"
            android:text="@string/submit_btn"
            android:textAppearance="@style/TextAppearance.AppCompat.Menu"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:backgroundTint="@color/new_bkg"/>
    </LinearLayout>
</LinearLayout>